--- a/compose.yaml
+++ b/compose.yaml
@@ -1,25 +1,68 @@
-
 services:
-###> doctrine/doctrine-bundle ###
+  php:
+    build:
+      context: ./
+      dockerfile: docker/php/Dockerfile
+    volumes:
+      - .:/app
+    working_dir: /app
+    ports:
+      - "9000:9000"
+    depends_on:
+      - redis
+      - database
+      - localstack
+    networks:
+      - api
+
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - 127.0.0.1:${NGINX_PORT:-8080}:80
+    volumes:
+      - .:/app:ro
+      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro,cached
+      - ./docker/nginx/logs:/var/log/nginx/
+    links:
+      - php
+    networks:
+      - api
+
+  redis:
+    image: redis:7.2-alpine
+    ports:
+      - "6379:6379"
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    networks:
+      - api
+
   database:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
       POSTGRES_USER: ${POSTGRES_USER:-app}
-    healthcheck:
-      test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB:-app}", "-U", "${POSTGRES_USER:-app}"]
-      timeout: 5s
-      retries: 5
-      start_period: 60s
     volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - ./docker/postgres/data:/var/lib/postgresql/data:rw
+    ports:
+      - "5432:5432"
+    networks:
+      - api
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+  localstack:
+    image: localstack/localstack
+    ports:
+      - "127.0.0.1:4566:4566"
+      - "127.0.0.1:4510-4559:4510-4559"
+    environment:
+      - DEBUG=${DEBUG:-0}
+    volumes:
+      - "${LOCALSTACK_VOLUME_DIR:-./docker/aws/localstack/volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    networks:
+      - api
+
+networks:
+  api:
+    driver: bridge
